--- a/5-knn/1-knn-basics.ipynb
+++ b/5-knn/1-knn-basics.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# knn\n",
     "    Assumption: Similar Inputs have similar outputs\n",
-    "    Classification rule: For a test input x, assign the most common label amongst its k most similar training inputs\n",
+    "    Classification rule: For a test input x, assign the most common label amongst its k nearest training inputs\n",
     "![image-2.png](attachment:image-2.png)\n",
     "\n",
     "    Neighbors' labels are 2×⊕ and 1×⊖ and the result is ⊕\n",
@@ -46,7 +46,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.datasets import load_iris\n",
     "from collections import Counter\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -82,7 +81,7 @@
     "        distances = [minkowski_distance(x , i) for i in self.xtrain]\n",
     "        \n",
     "        # get closest k and its label\n",
-    "        k_indices = np.argsort(distances)[:self.k] # argsort is to know which element will be takinf place while sorted\n",
+    "        k_indices = np.argsort(distances)[:self.k] # argsort ==> to know which element will be taking place while sorted\n",
     "        k_nearest_labels = [self.ytrain[i] for i in k_indices]\n",
     "        \n",
     "        # determine laber and majority vote\n",
@@ -107,9 +106,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 0, 0, 1, 2, 1, 0, 2, 2, 2, 2, 1, 1, 0, 0, 1, 2, 1, 0, 2, 2, 1, 0, 2, 0, 0, 1, 0]\n",
-      "acc_test =  96.66666666666667 %\n",
-      "acc =  96.0 %\n"
+      "[0, 2, 1, 2, 1, 0, 1, 1, 0, 2, 2, 1, 2, 2, 2, 0, 0, 0, 2, 0, 2, 1, 0, 2, 1, 2, 1, 1, 1, 0]\n",
+      "acc_test =  93.33333333333333 %\n",
+      "acc =  98.0 %\n"
      ]
     }
    ],
@@ -130,14 +129,6 @@
     "acc = accuracy_score(y, y_h)\n",
     "print('acc = ',acc*100,'%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f1042e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
